# anima-games-engine

./: CMakeAGTools.cmake  CMakeLists.txt  LOADEDAll-Complete.doxyfile  NyxCPackConfig.cmake  ProjectHome.md  README.md
Sources/: CMakeLists.txt
Sources/ChronoRage/: BonusDirection.cpp  BonusDirection.h  CMakeLists.txt  ChronoRage.cpp  ChronoRage.h  ChronoRage.rc  CubeInstancesGroup.cpp  GameSettings.cpp  GameTools.cpp  HighScores.cpp  Level.h  Main.cpp  PowerUp.cpp  PowerUp.h  RetributionLaser.h  Shot.h  TimeWarp.h  Vortex.cpp  Vortex.h  VoxelFont.cpp  VoxelSprite.h  WarningDirection.cpp  WarningDirection.h  _makeDemoInstall.nsi  _makeInstall.nsi  _packing.py  licence_ChronoRage.txt
Sources/ChronoRage/Controls/: IPlayerCtrl.h  PlayerCtrlJoystick.h  PlayerCtrlKeyboard.cpp
Sources/ChronoRage/Foes/: BonusCarrier.cpp  BonusCarrier.h  Boss.cpp  Boss.h  Buckler.cpp  Buckler.h  Charger.cpp  Charger.h  Foe.h  FoeText.cpp  Grunt.h  Kamikaze.cpp  LaserTurret.cpp  Minelayer.h  QuickTeleporter.h  Teleporter.h  Turret.h  UberBoss.cpp  Wasp.cpp  Wasp.h
Sources/ChronoRage/MenuScreens/: ScreenAchievements.cpp  ScreenAchievements.h  ScreenAudioSettings.cpp  ScreenAudioSettings.h  ScreenBuyGame.cpp  ScreenBuyGame.h  ScreenControlsSettings.cpp  ScreenCredits.cpp  ScreenCredits.h  ScreenMainMenu.h  ScreenMouseKeyboardSettings.h  ScreenSelectInput.cpp  ScreenSettings.cpp  ScreenSettings.h  ScreenTimeTrialMode.cpp  ScreenVideoSettings.cpp  ScreenVideoSettings.h
Sources/ChronoRage/Modes/: GameMode.cpp  GameMode1.cpp  GameModeCredits.cpp  GameModeCredits.h  GameModeDemo.cpp  GameModeDemo.h  GameModeLevels.cpp  GameModeLevels.h  GameModeRevenge.h  GameModeSurvival.h  GameModeTimeTrial.cpp  GameModeTimeTrial.h  IGameState.cpp  IGameState.h  MenuMode.cpp  StartMode.h
Sources/ChronoRage/Waves/: Formation.cpp
Sources/ChronoRage/_Demo/: CMakeLists.txt
Sources/Draft/: CMakeLists.txt
Sources/HOO/: CMakeLists.txt
Sources/HOO/GameEngine/: Enums.cpp  Enums.h  GameContext.h  GameEntity.cpp  GameLibraryNotFoundException.h  Player.cpp  Spell.cpp  SpellEffect.cpp  SpellInstance.cpp  SpellInstance.h  Stuff.h
Sources/HOO/HOOAdminProtocol/: AdminConnect.cpp  AdminConnect.h  AdminLogin.cpp  AdminLogin.h  AdminLogout.cpp  AdminLogout.h  BanUsers.cpp  BanUsers.h  ConnectedUsersInfos.cpp  LockUsers.h  SendMsgToUsers.cpp  SendMsgToUsers.h  ServerStats.h  ShutdownServer.cpp
Sources/HOO/HOOAdminTool/: AdminMessage.cpp  AdminRequestBar.moc.cpp  Main.cpp
Sources/HOO/HOOClient/: AppHOOClient.cpp  Avatar.cpp  Avatar.h  CMakeLists.txt  IAppState.h  Main.cpp  OutGameMusic.h  SpellIcon.h  SpellPanel.cpp  SpellPanel.h  StateInGame.cpp  StateInGame.h  StateOutGame.cpp
Sources/HOO/HOOClientBot/: CMakeLists.txt  ClientBot.cpp  ClientBot.h
Sources/HOO/HOOClientStub/: CMakeLists.txt  Main.cpp
Sources/HOO/HOOServer/: AdminSessionManager.cpp  CMakeLists.txt  Game.h  GamePool.cpp  ISessionManager.h  PlayerMatcher.h  Server.cpp  Server.h  ServerData.h  Session.h  UserSessionManager.cpp  UserSessionManager.h
Sources/HOO/HOOUpdater/: CMakeLists.txt  HooUpdater.aps  HooUpdater.rc  Prelude.h  WindowUpdater.cpp  WindowUpdater.h  resource.h
Sources/HOO/HOOUpdaterProtocol/: CMakeLists.txt  IUpdaterMessage.h  UpdaterConnect.h
Sources/HOO/HOOUserProtocol/: AdminMessage.cpp  CMakeLists.txt  CheckLoginAvailable.h  CreateUserAccount.cpp  CreateUserAccount.h  MaintenanceMessage.cpp  MaintenanceMessage.h  SendActivationCode.cpp  UserConnect.h  UserLogin.h
Sources/Modules/Assets/: Animation.h  GeometricPrimitive.h  Material.h  Model.h  ModelNode.h  ModelPose.h  NVMeshMender.cpp  NVMeshMender.h  PictureBank.cpp  Skeleton.cpp  SkeletonPose.h  TerrainModel.cpp  TerrainModel.h  Texture.cpp  Texture.h  Tool.cpp  Vertex.cpp  VerticeSet.h
Sources/Modules/Audio/: AudioGlobals.cpp  AudioGlobals.h  IDevice.cpp  IListener.h  ISoundSource.cpp  OggVorbis.cpp  Wave.cpp  Wave.h
Sources/Modules/Core/: Bitmap.cpp  Buffer.h  Containers.h  DateAndTime.h  Dictionary.cpp  DllEntry.cpp  Documentation.h  Logger.h  Map.h  NonCopyable.h  Ptr.h  ScopedFlag.h  Set.h  String.cpp  TGA.cpp  TGA.h
Sources/Modules/GUI/: BitmapFont.h  Button.cpp  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Label.cpp  Picture.cpp  Picture.h  ProgressBar.h  ResourcePool.cpp  RichTextLabel.cpp  ScrollBar.cpp  StretchBar.cpp
Sources/Modules/Gfx/: GfxType.h  IDepthStencil.cpp  IDevice.cpp  IDriver.cpp  IFont.cpp  IFont.h  IIndexBuffer.cpp  IIndexBuffer.h  IRenderState.cpp  IRenderState.h  IRenderTarget.cpp  ISwapChain.cpp  ITexture.cpp
Sources/Modules/Images/: Image.cpp  Image.h  ImageMosaic.cpp  ImageMosaic.h  Pixel.h
Sources/Modules/Network/: IPBlacklist.cpp  IPBlacklist.h  Message.cpp  NetworkEngine.cpp  NetworkEngine.h  Prelude.h  Watcher.h
Sources/Modules/Packing/: LightmapGen.cpp  OcclusionmapGen.cpp  TerrainTextureGen.cpp  TerrainTextureGen.h  TexCompressionOnTheFly.cpp  TexCompressionOnTheFly.h  WorldPak.cpp  WorldPak.h
Sources/Modules/Renderer/: CMakeLists.txt  ICamera.h  IMesh.h  IPictureBank.h  IRectangle.h  IRenderView.h  IRenderer.h  IText.h  ITexture.h  IWaterPatch.h  InstancesGroup.h  Material.cpp  RenderTools.h  Renderer.cpp  StreamBuffer.cpp  StreamBuffer.h
Sources/Modules/Social/: CMakeLists.txt  FacebookApp.cpp  FacebookExtendedPermissions.cpp  FacebookSession.h  SocialException.h
Sources/Modules/Universe/: CMakeLists.txt  Node.cpp  NodeDecal.cpp  NodeDecal.h  NodeGroup.cpp  NodeGroup.h  NodePointLight.cpp  NodeSpline.cpp  NodeSpline.h  NodeStorm.cpp  NodeStorm.h  NodeTerrain.cpp  NodeTrail.cpp  NodeTrail.h  NodeWaterPatch.cpp  NodeWaterPatch.h  RessourcePool.h  ScriptContext.cpp  ScriptOutput.cpp  SkySettings.h  Tools.cpp  World.cpp
Sources/Modules/Web/: CMakeLists.txt  JSON.h  Mail.h  OAuth2.cpp  OAuth2.h  WebException.h
Sources/Tools/: CMakeLists.txt
TestsValidation/TVAudioOpenAL/: CMakeLists.txt
TestsValidation/TVGUI/: AppTVGUI.cpp  AppTVGUI.h  CMakeLists.txt  GUISimple.cpp  ITestGUI.cpp
TestsValidation/TVGfxDx9/: CMakeLists.txt  Main.cpp
trunk/TestsUnitaires/: CMakeLists.txt
trunk/TestsValidation/: CMakeLists.txt
(+1600 files in other folders)
