AG_PROJECT(HOOUPDATERPROTOCOL HUDP)

set (HOOUPDATERPROTOCOL_ALL_PATH "/" )
list (APPEND HOOUPDATERPROTOCOL_ALL_PATH "/GameMessage/")
list (APPEND HOOUPDATERPROTOCOL_ALL_PATH "/LaunchMatchMessage/")

#on regroupe l'ensemble des fichiers includes et sources
ag_create_incFile_srcFile(HOOUPDATERPROTOCOL_ALL_PATH HOOUPDATERPROTOCOL_INC_FILES HOOUPDATERPROTOCOL_SRC_FILES)

AG_MAKE_PRECOMPILED_HEADERS(HOOUPDATERPROTOCOL HOOUPDATERPROTOCOL_SRC_FILES)

add_library (HOOUpdaterProtocol ${HOOUPDATERPROTOCOL_INC_FILES} ${HOOUPDATERPROTOCOL_SRC_FILES})
target_link_libraries (HOOUpdaterProtocol Core)
