AG_PROJECT(HOOUSERPROTOCOL HUP)

set (HOOUSERPROTOCOL_ALL_PATH "/" )
list (APPEND HOOUSERPROTOCOL_ALL_PATH "/GameMessage/")
list (APPEND HOOUSERPROTOCOL_ALL_PATH "/LaunchMatchMessage/")

#on regroupe l'ensemble des fichiers includes et sources
ag_create_incFile_srcFile(HOOUSERPROTOCOL_ALL_PATH HOOUSERPROTOCOL_INC_FILES HOOUSERPROTOCOL_SRC_FILES)

AG_MAKE_PRECOMPILED_HEADERS(HOOUserProtocol HOOUSERPROTOCOL_SRC_FILES)

add_library (HOOUserProtocol ${HOOUSERPROTOCOL_INC_FILES} ${HOOUSERPROTOCOL_SRC_FILES})
target_link_libraries (HOOUserProtocol Core)
